--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/IMGS/Home-1.png" />
+    <link rel="stylesheet" href="./src/bootstrap-4.0.0-dist (1)/css/bootstrap.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mic-Academy-internship</title>
   </head>
   <body>
     <div id="root"></div>
+
+
+
+
+    <script src="./src/bootstrap-4.0.0-dist (1)/js/jquery-3.7.1.min.js"></script>
+    <script src="./src/bootstrap-4.0.0-dist (1)/js/popper.min.js"></script>
+    <script src="./src/bootstrap-4.0.0-dist (1)/js/bootstrap.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
